// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`noMessages is true 1`] = `
<div
  className="header layout-row flex-100 layout-wrap layout-align-center   "
  style={
    Object {
      "color": "black",
    }
  }
>
  <div
    className="flex-100 layout-row"
    style={
      Object {
        "padding": "0 15px",
      }
    }
  >
    <div
      className="layout-row flex layout-align-start-center pointy"
    >
      <img
        alt=""
        className="undefined"
        onClick={[Function]}
        src=""
        style={
          Object {
            "display": "block",
          }
        }
      />
    </div>
    <div>
      FooComponent
    </div>
    <div
      className="flex layout-row layout-align-end-center"
    >
      <div
        className="layout-row layout-align-space-around-center"
      >
        <NavDropdown
          dropDownText="John Doe"
          invert={false}
          isLanding={false}
          linkOptions={
            Array [
              Object {
                "fontAwesomeIcon": "fa-cog",
                "key": "settings",
                "text": "Account",
                "url": "/account",
              },
              Object {
                "fontAwesomeIcon": "fa-sign-out",
                "key": "signOut",
                "text": "Sign out",
                "url": "/signout",
              },
            ]
          }
          loginText="Log In / Register"
          toggleShowLogin={[Function]}
          user={
            Object {
              "company_name": "FOO_COMPANY",
              "currency": "EUR",
              "email": "foo@bar.baz",
              "first_name": "John",
              "guest": false,
              "last_name": "Doe",
              "phone": "6345789",
              "role": Object {
                "name": "shipper",
              },
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="header layout-row flex-100 layout-wrap layout-align-center   "
  style={
    Object {
      "color": "black",
    }
  }
>
  <div
    className="flex-100 layout-row"
    style={
      Object {
        "padding": "0 15px",
      }
    }
  >
    <div
      className="layout-row flex layout-align-start-center pointy"
    >
      <img
        alt=""
        className="undefined"
        onClick={[Function]}
        src=""
        style={
          Object {
            "display": "block",
          }
        }
      />
    </div>
    <div>
      FooComponent
    </div>
    <div
      className="flex layout-row layout-align-end-center"
    >
      <div
        className="layout-row layout-align-space-around-center"
      >
        <NavDropdown
          dropDownText="John Doe"
          invert={false}
          isLanding={false}
          linkOptions={
            Array [
              Object {
                "fontAwesomeIcon": "fa-cog",
                "key": "settings",
                "text": "Account",
                "url": "/account",
              },
              Object {
                "fontAwesomeIcon": "fa-sign-out",
                "key": "signOut",
                "text": "Sign out",
                "url": "/signout",
              },
            ]
          }
          loginText="Log In / Register"
          toggleShowLogin={[Function]}
          user={
            Object {
              "company_name": "FOO_COMPANY",
              "currency": "EUR",
              "email": "foo@bar.baz",
              "first_name": "John",
              "guest": false,
              "last_name": "Doe",
              "phone": "6345789",
              "role": Object {
                "name": "shipper",
              },
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`showModal is true 1`] = `
<div
  className="header layout-row flex-100 layout-wrap layout-align-center   "
  style={
    Object {
      "color": "black",
    }
  }
>
  <div
    className="flex-100 layout-row"
    style={
      Object {
        "padding": "0 15px",
      }
    }
  >
    <div
      className="layout-row flex layout-align-start-center pointy"
    >
      <img
        alt=""
        className="undefined"
        onClick={[Function]}
        src=""
        style={
          Object {
            "display": "block",
          }
        }
      />
    </div>
    <div>
      FooComponent
    </div>
    <div
      className="flex layout-row layout-align-end-center"
    >
      <div
        className="layout-row layout-align-space-around-center"
      >
        <NavDropdown
          dropDownText="John Doe"
          invert={false}
          isLanding={false}
          linkOptions={
            Array [
              Object {
                "fontAwesomeIcon": "fa-cog",
                "key": "settings",
                "text": "Account",
                "url": "/account",
              },
              Object {
                "fontAwesomeIcon": "fa-sign-out",
                "key": "signOut",
                "text": "Sign out",
                "url": "/signout",
              },
            ]
          }
          loginText="Log In / Register"
          toggleShowLogin={[Function]}
          user={
            Object {
              "company_name": "FOO_COMPANY",
              "currency": "EUR",
              "email": "foo@bar.baz",
              "first_name": "John",
              "guest": false,
              "last_name": "Doe",
              "phone": "6345789",
              "role": Object {
                "name": "shipper",
              },
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`showRegistration is true 1`] = `
<div
  className="header layout-row flex-100 layout-wrap layout-align-center   "
  style={
    Object {
      "color": "black",
    }
  }
>
  <div
    className="flex-100 layout-row"
    style={
      Object {
        "padding": "0 15px",
      }
    }
  >
    <div
      className="layout-row flex layout-align-start-center pointy"
    >
      <img
        alt=""
        className="undefined"
        onClick={[Function]}
        src=""
        style={
          Object {
            "display": "block",
          }
        }
      />
    </div>
    <div>
      FooComponent
    </div>
    <div
      className="flex layout-row layout-align-end-center"
    >
      <div
        className="layout-row layout-align-space-around-center"
      >
        <NavDropdown
          dropDownText="John Doe"
          invert={false}
          isLanding={false}
          linkOptions={
            Array [
              Object {
                "fontAwesomeIcon": "fa-cog",
                "key": "settings",
                "text": "Account",
                "url": "/account",
              },
              Object {
                "fontAwesomeIcon": "fa-sign-out",
                "key": "signOut",
                "text": "Sign out",
                "url": "/signout",
              },
            ]
          }
          loginText="Log In / Register"
          toggleShowLogin={[Function]}
          user={
            Object {
              "company_name": "FOO_COMPANY",
              "currency": "EUR",
              "email": "foo@bar.baz",
              "first_name": "John",
              "guest": false,
              "last_name": "Doe",
              "phone": "6345789",
              "role": Object {
                "name": "shipper",
              },
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`unread > 0 1`] = `
<div
  className="header layout-row flex-100 layout-wrap layout-align-center   "
  style={
    Object {
      "color": "black",
    }
  }
>
  <div
    className="flex-100 layout-row"
    style={
      Object {
        "padding": "0 15px",
      }
    }
  >
    <div
      className="layout-row flex layout-align-start-center pointy"
    >
      <img
        alt=""
        className="undefined"
        onClick={[Function]}
        src=""
        style={
          Object {
            "display": "block",
          }
        }
      />
    </div>
    <div>
      FooComponent
    </div>
    <div
      className="flex layout-row layout-align-end-center"
    >
      <div
        className="layout-row layout-align-space-around-center"
      >
        <NavDropdown
          dropDownText="John Doe"
          invert={false}
          isLanding={false}
          linkOptions={
            Array [
              Object {
                "fontAwesomeIcon": "fa-cog",
                "key": "settings",
                "text": "Account",
                "url": "/account",
              },
              Object {
                "fontAwesomeIcon": "fa-sign-out",
                "key": "signOut",
                "text": "Sign out",
                "url": "/signout",
              },
            ]
          }
          loginText="Log In / Register"
          toggleShowLogin={[Function]}
          user={
            Object {
              "company_name": "FOO_COMPANY",
              "currency": "EUR",
              "email": "foo@bar.baz",
              "first_name": "John",
              "guest": false,
              "last_name": "Doe",
              "phone": "6345789",
              "role": Object {
                "name": "shipper",
              },
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`user is falsy 1`] = `
<div
  className="header layout-row flex-100 layout-wrap layout-align-center   "
  style={
    Object {
      "color": "black",
    }
  }
>
  <div
    className="flex-100 layout-row"
    style={
      Object {
        "padding": "0 15px",
      }
    }
  >
    <div
      className="layout-row flex layout-align-start-center pointy"
    >
      <img
        alt=""
        className="undefined"
        onClick={[Function]}
        src=""
        style={
          Object {
            "display": "block",
          }
        }
      />
    </div>
    <div>
      FooComponent
    </div>
    <div
      className="flex layout-row layout-align-end-center"
    >
      <div
        className="layout-row layout-align-space-around-center"
      >
        <NavDropdown
          dropDownText=""
          invert={false}
          isLanding={false}
          linkOptions={
            Array [
              Object {
                "fontAwesomeIcon": "fa-cog",
                "key": "settings",
                "text": "Account",
                "url": "/account",
              },
              Object {
                "fontAwesomeIcon": "fa-sign-out",
                "key": "signOut",
                "text": "Sign out",
                "url": "/signout",
              },
            ]
          }
          loginText="Log In / Register"
          toggleShowLogin={[Function]}
          user={null}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`user.role_id === 2 1`] = `
<div
  className="header layout-row flex-100 layout-wrap layout-align-center   "
  style={
    Object {
      "color": "black",
    }
  }
>
  <div
    className="flex-100 layout-row"
    style={
      Object {
        "padding": "0 15px",
      }
    }
  >
    <div
      className="layout-row flex layout-align-start-center pointy"
    >
      <img
        alt=""
        className="undefined"
        onClick={[Function]}
        src=""
        style={
          Object {
            "display": "block",
          }
        }
      />
    </div>
    <div>
      FooComponent
    </div>
    <div
      className="flex layout-row layout-align-end-center"
    >
      <div
        className="layout-row layout-align-space-around-center"
      >
        <NavDropdown
          dropDownText="John Doe"
          invert={false}
          isLanding={false}
          linkOptions={
            Array [
              Object {
                "fontAwesomeIcon": "fa-cog",
                "key": "settings",
                "text": "Account",
                "url": "/account",
              },
              Object {
                "fontAwesomeIcon": "fa-sign-out",
                "key": "signOut",
                "text": "Sign out",
                "url": "/signout",
              },
            ]
          }
          loginText="Log In / Register"
          toggleShowLogin={[Function]}
          user={
            Object {
              "company_name": "FOO_COMPANY",
              "currency": "EUR",
              "email": "foo@bar.baz",
              "first_name": "John",
              "guest": false,
              "last_name": "Doe",
              "phone": "6345789",
              "role": Object {
                "name": "shipper",
              },
              "role_id": 2,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
